--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
         <h2 class="seccion-titulo">Conoce a Jazmin C. Baéz</h2>
-        <p class="seccion-texto">Soy estudiante de ingeniería en mecatrónica en la Benemértita Universidad Autónoma de Puebla, elegí la carrera porque me gusta construir circuitos electrónicos y sobre todo entender su lógica para programarlos adecuadamente. Actualmete soy becada en Tecnolochicas PRO donde estoy aprendiendo frontend, un curso donde fomentan el desarrollo de mas mujeres en la tecnología.  </p>
+        <p class="seccion-texto">Soy estudiante de ingeniería en mecatrónica en la Benemérita Universidad Autónoma de Puebla, elegí la carrera porque me gusta construir circuitos electrónicos y sobre todo entender su lógica para programarlos adecuadamente. Actualmete soy becada en Tecnolochicas PRO donde estoy aprendiendo frontend, un curso donde fomentan el desarrollo de mas mujeres en la tecnología.  </p>
       </div>
     </section>
 
